Fix funnel alignment

--- a/frontend/src/queries/nodes/InsightViz/InsightViz.scss
+++ b/frontend/src/queries/nodes/InsightViz/InsightViz.scss
@@ -8,6 +8,7 @@
 
     &.InsightViz--horizontal {
         flex-flow: row wrap;
+        align-items: start;
 
         .EditorFiltersWrapper {
             width: 100%;
